pkg/ibmvpc/examples/out/explain_out/multiVPCVsiToVsi_all_vpcs_explain_detail.txt
Explaining connectivity from vsi31-ky to vsi32-ky within test-vpc3-ky
Interpreted source: vsi31-ky[10.240.31.4]
Interpreted destination: vsi32-ky[10.240.128.4]
=====================================================================

Connections from vsi31-ky[10.240.31.4] to vsi32-ky[10.240.128.4]: All Connections

Path:
	vsi31-ky[10.240.31.4] -> security group sg31-ky -> network ACL acl31-ky -> subnet31-ky -> 
	subnet32-ky -> network ACL acl31-ky -> security group sg31-ky -> vsi32-ky[10.240.128.4]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg31-ky allows connection with the following allow rules
			index: 1, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl31-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl31-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
		security group sg31-ky allows connection with the following allow rules
			index: 0, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

TCP response is enabled; The relevant rules are:
	Egress:
		network ACL acl31-ky allows connection with the following allow rules
			index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

	Ingress:
		network ACL acl31-ky allows connection with the following allow rules
			index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
